# radartools

./: .gitignore  README.md  setup.cfg
config/: __init__.py  base_config.py  json_config.py  python_config.py
datareader/: __init__.py  reader_awr2243.py  reader_awr2243_live.py
examples/: beamforming2D.ipynb  beamforming2D_live.ipynb  layout.ipynb
radardsp/: __init__.py
radardsp/processor/: beamforming_processor.py
radardsp/utils/: __init__.py
radardsp/utils/preprocess/: __init__.py  antennas.py  calibration.py
radartools/client/: __init__.py  radar_client.py
radartools/config/: json_config.py  python_config.py
radartools/datareader/: __init__.py  reader_awr2243.py  reader_awr2243_live.py
radartools/radardsp/processor/: __init__.py  beamforming_processor.py
radartools/radardsp/utils/preprocess/: calibration.py
resources/: calibMatHor.mat  calibMatVer.mat  id253-hor-cali.mat  id253-ver-cali.mat
settings/: processing.py  read2243.py
