[metadata]
name = radartools
version = 0.1
author = Zixin Shang
author_email = zxshang@mail.ustc.edu.cn
long_description = file: README.md
license = MIT
url = http://iplab-ustc.site/gitlab/thinszx/radartools
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    scipy
    numpy
    matplotlib

[options.extras_require]
gpu =
    cupy

[options.packages.find]
exclude =
    examples
    resources
    settings
    output*
    *.ipynb