[metadata]
name = radartools
version = 0.1
author = Zixin Shang
author_email = zxshang@mail.ustc.edu.cn
long_description = file: README.md
license = MIT
url = http://iplab-ustc.site/gitlab/thinszx/radartools
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Environment :: Win32 (MS Windows)
    Operating System :: Microsoft :: Windows

[options]
packages = find:
install_requires =
    scipy
    numpy
    ffmpeg
    paramiko
    matplotlib

[options.extras_require]
gpu =
    cupy

[options.packages.find]
exclude =
    examples
    resources
    settings
    output*
    *.ipynb